// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message hasArrow 1`] = `
<div
  className="za-message theme-primary"
  onClick={[Function]}
>
  <div
    className="za-message-header"
  />
  <div
    className="za-message-body"
  >
    foo
  </div>
  <div
    className="za-message-footer"
  >
    <Icon
      className={null}
      prefixCls="za-icon"
      theme={null}
      type="arrow-right"
    />
  </div>
</div>
`;

exports[`Message hasClosable 1`] = `
<div
  className="za-message theme-primary"
  onClick={null}
>
  <div
    className="za-message-header"
  />
  <div
    className="za-message-body"
  >
    foo
  </div>
  <div
    className="za-message-footer"
  >
    <Icon
      className={null}
      onClick={[Function]}
      prefixCls="za-icon"
      theme={null}
      type="wrong"
    />
  </div>
</div>
`;

exports[`Message icon 1`] = `
<div
  class="za-message theme-primary"
>
  <div
    class="za-message-header"
  >
    <div
      class="za-message-icon"
    >
      <img
        alt=""
        src="https://zhongantecheng.github.io/zarm/images/state.18e78939.png"
      />
    </div>
  </div>
  <div
    class="za-message-body"
  >
    foo
  </div>
</div>
`;

exports[`Message renders correctly 1`] = `
<div
  class="za-message theme-primary"
>
  <div
    class="za-message-header"
  />
  <div
    class="za-message-body"
  >
    foo
  </div>
</div>
`;

exports[`Message theme 1`] = `
<div
  class="za-message theme-error"
>
  <div
    class="za-message-header"
  />
  <div
    class="za-message-body"
  >
    foo
  </div>
</div>
`;
